@@ -25,11 +25,11 @@ CAMLprim value unix_execv(value path, value args)
   char_os * wpath;
   char_os ** argv;
   caml_unix_check_path(path, "execv");
-  argv = cstringvect(args, "execv");
+  argv = unix_cstringvect(args, "execv");
   wpath = caml_stat_strdup_to_os(String_val(path));
   (void) execv_os(wpath, EXECV_CAST argv);
   caml_stat_free(wpath);
-  cstringvect_free(argv);
+  unix_cstringvect_free(argv);
   uerror("execv", path);
   return Val_unit;                  /* never reached, but suppress warnings */
                                 /* from smart compilers */
