@@ -38,8 +38,6 @@
 
 static int entry_h_length;
 
-extern int socket_domain_table[];
-
 static value alloc_one_addr(char const *a)
 {
   struct in_addr addr;
@@ -47,11 +45,11 @@ static value alloc_one_addr(char const *a)
   struct in6_addr addr6;
   if (entry_h_length == 16) {
     memmove(&addr6, a, 16);
-    return alloc_inet6_addr(&addr6);
+    return unix_alloc_inet6_addr(&addr6);
   }
 #endif
   memmove (&addr, a, 4);
-  return alloc_inet_addr(&addr);
+  return unix_alloc_inet_addr(&addr);
 }
 
 static value alloc_host_entry(struct hostent *entry)
