@@ -29,5 +29,5 @@ CAMLprim value unix_getpeername(value sock)
     win32_maperr(WSAGetLastError());
     uerror("getpeername", Nothing);
   }
-  return alloc_sockaddr(&addr, addr_len, -1);
+  return unix_alloc_sockaddr(&addr, addr_len, -1);
 }
