@@ -99,8 +99,9 @@ static value stat_aux(int use_64, __int64 st_ino, struct _stat64 *buf)
   v = caml_alloc (12, 0);
   Store_field (v, 0, Val_int (buf->st_dev));
   Store_field (v, 1, Val_int (st_ino ? st_ino & Max_long : buf->st_ino));
-  Store_field (v, 2, cst_to_constr (buf->st_mode & S_IFMT, file_kind_table,
-                                    sizeof(file_kind_table) / sizeof(int), 0));
+  Store_field (v, 2, unix_cst_to_constr (buf->st_mode & S_IFMT, file_kind_table,
+                                         sizeof(file_kind_table) / sizeof(int),
+                                         0));
   Store_field (v, 3, Val_int(buf->st_mode & 07777));
   Store_field (v, 4, Val_int (buf->st_nlink));
   Store_field (v, 5, Val_int (buf->st_uid));
