@@ -80,7 +80,7 @@ extern void win32_maperr(DWORD errcode);
 #define Nothing ((value) 0)
 
 extern value unix_error_of_code (int errcode);
-extern int code_of_unix_error (value error);
+extern int unix_code_of_unix_error (value error);
 
 CAMLnoreturn_start
 extern void unix_error (int errcode, const char * cmdname, value arg)
@@ -96,8 +96,8 @@ extern void caml_unix_check_path(value path, const char * cmdname);
 
 #define DIR_Val(v) *((DIR **) &Field(v, 0))
 
-extern char_os ** cstringvect(value arg, char * cmdname);
-extern void cstringvect_free(char_os **);
+extern char_os ** unix_cstringvect(value arg, char * cmdname);
+extern void unix_cstringvect_free(char_os **);
 
 extern int unix_cloexec_default;
 extern int unix_cloexec_p(value cloexec);
