@@ -62,7 +62,7 @@ EOF
 Build () {
   $MAKE world.opt
   echo Ensuring that all names are prefixed in the runtime
-  ./tools/check-symbol-names runtime/*.a
+  ./tools/check-symbol-names runtime/*.a otherlibs/*/lib*.a
 }
 
 Test () {
