@@ -470,6 +470,10 @@ OCaml 4.14.0
   WSADuplicateSocket on sockets instead of DuplicateHandle.
   (Antonin Décimo, review by Xavier Leroy and Nicolás Ojeda Bär)
 
+- #10926: Prefix all C functions in the Unix library with `unix_` except for the
+  venerable `uerror`.
+  (David Allsopp, review by Kate Deplaix and Xavier Leroy)
+
 - #10951: Introduce the Thread.Exit exception as an alternative way to
   terminate threads prematurely.  This alternative way will become
   the standard way in 5.0.
